[gd_scene load_steps=7 format=3 uid="uid://c83228r10urql"]

[ext_resource type="Script" uid="uid://ddwjr7w8l6vyd" path="res://ScenesAndScripts/LevelElements/Enemies/Sniper.gd" id="1_vijh0"]
[ext_resource type="Texture2D" uid="uid://4hg5jm10j7va" path="res://Assets/Visual Assets/pixil-frame-0-8.png" id="2_htxyj"]
[ext_resource type="Script" uid="uid://cf7p6ocure5g" path="res://ScenesAndScripts/LevelElements/Enemies/SniperWallcheck.gd" id="3_ake7c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6jcko"]
resource_local_to_scene = true
atlas = ExtResource("2_htxyj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ml80e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7dwn"]
size = Vector2(32, 32)

[node name="Sniper" type="Node2D"]
script = ExtResource("1_vijh0")

[node name="SniperSprite" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_6jcko")

[node name="SniperRaycast" type="RayCast2D" parent="."]
target_position = Vector2(512, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="SniperWallcheck" type="Node2D" parent="."]
script = ExtResource("3_ake7c")

[node name="Area2D" type="Area2D" parent="SniperWallcheck"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SniperWallcheck/Area2D"]
shape = SubResource("RectangleShape2D_ml80e")

[node name="EnemyCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollision"]
shape = SubResource("RectangleShape2D_s7dwn")
